--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 # Project metadata
+sonar.organization=stivenviedman
 sonar.projectKey=stivenviedman_dsc_taller_1
 sonar.projectName=dsc_taller_1
 sonar.projectVersion=1.0
