--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,4 +1,4 @@
-name: SonarCloud
+name: CI
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    name: Build and Analyze
+    name: Build, Test and Analyze
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +18,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+
+      - name: Run unit tests
+        run: go test ./... -v
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
