--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -25,7 +25,7 @@ jobs:
           go-version: '1.23'
 
       - name: Run unit tests
-        run: go test ./... -v
+        run: cd backend && go test ./... -v
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
