--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,16 +5,19 @@ sonar.projectName=dsc_taller_1
 sonar.projectVersion=1.0
 
 # Source folders
-sonar.sources=.
+sonar.sources=backend
 sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/dist/**
 
 # Backend (Go)
 sonar.language=go
 sonar.go.coverage.reportPaths=backend/coverage.out
-sonar.exclusions=**/node_modules/**,**/*.test.js,**/*.spec.js
+# sonar.exclusions=**/node_modules/**,**/*.test.js,**/*.spec.js
+# sonar.sources=backend
+sonar.tests=backend
+sonar.go.coverage.reportPaths=backend/coverage.out
 
 # Frontend (Next.js / JS / TS)
-sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+# sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
 
 # Encoding
-sonar.sourceEncoding=UTF-8
+# sonar.sourceEncoding=UTF-8
