--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,11 +10,10 @@ sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/dist/**
 
 # Backend (Go)
 sonar.language=go
-sonar.go.coverage.reportPaths=backend/coverage.out
+# sonar.go.coverage.reportPaths=backend/coverage.out
 # sonar.exclusions=**/node_modules/**,**/*.test.js,**/*.spec.js
-# sonar.sources=backend
 sonar.tests=backend
-sonar.go.coverage.reportPaths=backend/coverage.out
+sonar.go.coverage.reportPaths=coverage.out
 
 # Frontend (Next.js / JS / TS)
 # sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
