--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,14 +6,14 @@ sonar.projectVersion=1.0
 
 # Source folders
 sonar.sources=backend
-sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/dist/**
+# sonar.exclusions=**/node_modules/**,**/.next/**,**/coverage/**,**/dist/**
 
 # Backend (Go)
 sonar.language=go
 # sonar.go.coverage.reportPaths=backend/coverage.out
 # sonar.exclusions=**/node_modules/**,**/*.test.js,**/*.spec.js
-sonar.tests=backend
-sonar.go.coverage.reportPaths=coverage.out
+# sonar.tests=backend
+sonar.go.coverage.reportPaths=backend/coverage.out
 
 # Frontend (Next.js / JS / TS)
 # sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
