--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,4 @@ sonar.sources=backend
 # Backend (Go)
 sonar.language=go
 sonar.go.coverage.reportPaths=backend/coverage.out
+sonar.coverage.exclusions=**/*_test.go
