--- a/backend/Dockerfile.worker
+++ b/backend/Dockerfile.worker
@@ -12,9 +12,18 @@ RUN go build -o backend-worker ./cmd/worker/main.go
 
 FROM debian:bookworm-slim
 
+# Install ffmpeg + scp (openssh-client)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ffmpeg \
+    openssh-client \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY --from=builder /app/backend-worker .
 COPY --from=builder /app/.env .
+COPY --from=builder --chmod=400 /app/nfs-server-pairkeys.pem .
+
+RUN mkdir -p /app/uploads /app/processed
 
 CMD ["./backend-worker"]
