--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 # next.js
 /ui/.next/
 /ui/out/
+/ui/videos/
+/ui/app/videos/
 
 # production
 /ui/build
@@ -30,7 +32,7 @@
 /ui/yarn-error.log*
 /ui/.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# env files (can opt-in for committing if needed)cd .
 /ui/.env*
 
 # vercel
@@ -44,3 +46,6 @@
 /backend/uploads
 /backend/processed
 coverage.out
+
+# Load test
+/load_testing/videos/
