--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -12,18 +12,15 @@ RUN go build -o backend ./main.go
 
 FROM debian:bookworm-slim
 
-# Install ffmpeg + scp (openssh-client)
+# Install dependencies and CA certificates
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    ca-certificates \
     ffmpeg \
     openssh-client \
+    && update-ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-
-# Install ffmpeg for video processing
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/backend .
 COPY --from=builder /app/.env .
