chore: modify env variables

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=0.0.0.0
+DB_HOST=10.0.143.181
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=admin
@@ -7,5 +7,8 @@ DB_SSLMODE=disable
 KEY_TOKEN=todolistapp
 REDIS_HOST=redis
 REDIS_PORT=6379
-MODE=LOCAL
-FILE_SERVER_HOST=0.0.0.0
+S3_BUCKET=anb-videos
+AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_SESSION_TOKEN=
