chore: modify env variables

--- a/backend/.env
+++ b/backend/.env
@@ -2,10 +2,10 @@ DB_HOST=10.0.143.181
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=admin
-DB_NAME=todolist-dev
+DB_NAME=anb-dev
 DB_SSLMODE=disable
 KEY_TOKEN=todolistapp
-REDIS_HOST=redis
+REDIS_HOST=10.0.0.140
 REDIS_PORT=6379
 S3_BUCKET=anb-videos
 AWS_REGION=us-east-1
