feat: replace Asynq by SQS

--- a/backend/.env
+++ b/backend/.env
@@ -5,10 +5,9 @@ DB_PASSWORD=admin
 DB_NAME=anb-dev
 DB_SSLMODE=disable
 KEY_TOKEN=todolistapp
-REDIS_HOST=10.0.138.35
-REDIS_PORT=6379
-S3_BUCKET=anb-videos
+S3_BUCKET=anb-123
 AWS_REGION=us-east-1
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_SESSION_TOKEN=
+SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/888393443808/anb
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
+#AWS_SESSION_TOKEN=
