--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,14 @@
-DB_HOST=10.0.139.110
+DB_HOST=database-XYZ.us-east-1.rds.amazonaws.com
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_NAME=anb-dev
-DB_SSLMODE=disable
+DB_USER=potgres
+DB_PASSWORD=
+DB_NAME=anb
+DB_SSLMODE=require
 KEY_TOKEN=todolistapp
 S3_BUCKET=anb-123
 AWS_REGION=us-east-1
-SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/888393443808/anb
-#AWS_ACCESS_KEY_ID=
-#AWS_SECRET_ACCESS_KEY=
-#AWS_SESSION_TOKEN=
+SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/123/anb
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
+
